# mengxuegushi-rust

./: .env.example  .env.production.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
data/: poems.seed.json
docs/: 01-overview-design.md  02-detailed-design.md  03-database-design.md  04-api-design.md  05-production-deployment.md  README.md
migrations/: 202605310001_init.sql  202605310002_expand_poems.sql  202605310003_user_activity.sql  202605310004_recitations.sql  202605310005_unique_active_recitation.sql  202605310006_table_comments.sql  202605310007_poem_themes.sql  202605310008_seed_poem_theme_relations.sql  202605310009_poem_image_url.sql  202606010001_expand_poem_library.sql  202606010002_enrich_new_poems.sql  202606010003_set_expanded_poem_audio_urls.sql  202606010004_set_expanded_poem_api_audio_urls.sql  202606010005_set_expanded_poem_local_audio_urls.sql  202606020001_poem_line_timings.sql  202606020002_poem_follow_timings.sql  202606040001_poem_artworks.sql  202606200001_poem_audio_version.sql  202606200002_parent_feedback.sql  202606200003_admin_feedback.sql  202606260001_reminder.sql  202606260002_invite.sql  202606260003_events.sql  202606270001_moments.sql  202606280001_moment_images.sql  202606280002_moment_comments.sql  202606280003_user_follows.sql  202606280004_moment_location.sql  202606300001_account_login.sql
src/: config.rs  error.rs  ip_guard.rs  main.rs
src/models/: activity.rs  artwork.rs  auth.rs  event.rs  feedback.rs  home.rs  invite.rs  mod.rs  moment.rs  poem.rs  profile.rs  theme.rs  (+2 more)
(+30 files in other folders)
